Fixes math alignment.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -30,6 +30,89 @@ math[display="block"] {
   text-align: center;
 }
 
+mtable.tml-jot > mtr > mtd {
+  padding-top: calc(0.5ex + 0.09em);
+  padding-bottom: calc(0.5ex + 0.09em);
+}
+
+/* Zero column gap for {alignat}, {split}, etc */
+mtable.tml-abut > mtr > mtd,
+mtable.tml-align > mtr > mtd:nth-child(odd),
+mtable.tml-align-star > mtr > mtd:nth-child(even) {
+  padding-left: 0em;
+  padding-right: 0em;
+}
+
+mtable.tml-align > mtr > mtd:nth-child(even),
+mtable.tml-align-star > mtr > mtd:nth-child(odd) {
+  padding-left: 1em;
+  padding-right: 0em;
+}
+
+mtable.tml-align > mtr > mtd:nth-child(1) {
+  padding-left: 0em;
+}
+
+mtable.tml-align > mtr > mtd:nth-child(odd),
+mtable.tml-alignat > mtr > mtd:nth-child(odd),
+mtable.tml-aligned > mtr > mtd:nth-child(even) {
+  text-align: -webkit-left;
+  text-align: -moz-left;
+  text-align: left;
+}
+
+mtable.tml-align > mtr > mtd:nth-child(even),
+mtable.tml-alignat > mtr > mtd:nth-child(even),
+mtable.tml-aligned > mtr > mtd:nth-child(odd) {
+  text-align: -webkit-right;
+  text-align: -moz-right;
+  text-align: right;
+}
+
+mtable.tml-cases > mtr > mtd {
+  padding-left: 0em;
+  padding-right: 0em;
+  text-align: -webkit-left;
+  text-align: -moz-left;
+}
+
+mtable.tml-cases > mtr > mtd:nth-child(2) {
+  padding-left: 1em;
+}
+
+mtable.tml-small > mtr > mtd {
+  padding-top: 0.35ex;
+  padding-bottom: 0.35ex;
+  padding-left: 0.1389em;
+  padding-right: 0.1389em;
+}
+
+mtable.tml-subarray > mtr > mtd {
+  padding-top: 0em;
+  padding-left: 0em;
+}
+
+mtable.tml-cd > mtr > mtd {
+  padding-left: 0.25em;
+  padding-right: 0.25em;
+}
+
+mtable > mtr:first-child > mtr > mtd {
+  padding-top: 0em;
+}
+
+mtable > mtr:last-child > mtr > mtd {
+  padding-bottom: 0em;
+}
+
+mtable:not(.tml-array) > mtr > mtd:first-child {
+  padding-left: 0em;
+}
+
+mtable:not(.tml-array) > mtr > mtd:last-child {
+  padding-right: 0em;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   text-align: left;
